[package]
name = "bicycle-book-wordcount"
version = "0.1.0"
authors = ["RustBicycleBook <3han5chou7+bicyclebook@gmail.com>"]
edition = "2018"
# ここから追記
license = "MIT OR Apache-2.0"
description = "シンプルな文字、単語、行の出現頻度の計数機能を提供します。"
readme = "README.md"
repository = "https://github.com/RustBicycleBook/wordcount"
categories = ["command-line-utilities"]
keywords = ["example", "frequency", "text"]
exclude = ["text.txt", "tests/*"]

[badges]
appveyor = { repository = "RustBicycleBook/wordcount" }
travis-ci = { repository = "RustBicycleBook/wordcount" }

# 追記ここまで

[dependencies]
regex = "1.0"
